--- a/ya_news/pytest.ini
+++ b/ya_news/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = yanews.settings
 norecursedirs = env/* venv/*
-addopts = -vv -p no:cacheprovider
+addopts = --reuse-db
 testpaths = news/pytest_tests/
 python_files = test_*.py
